<resources>
    <string name="hello_world">Hello world!</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="white">WHITE</string>
    <string name="yellow">YELLOW</string>
    <string name="image_body_1">body</string>
    <string name="image_body_2">underBody</string>
    <string name="app_name">What To Weather?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="dress">Please wear a dress</string>
    <string name="gloves_off">Please don\'t wear gloves</string>
    <string name="gloves_on">Please wear gloves</string>
    <string name="hat">Please wear a hat</string>
    <string name="hoodie">Please wear a hoodie</string>
    <string name="jacket">Please wear a coat</string>
    <string name="jeans">Please wear jeans</string>
    <string name="legs_nothing">Please wear nothing</string>
    <string name="nothing">Please wear nothing</string>
    <string name="longsleeve">Please wear a longsleeve</string>
    <string name="middle_skirt">Please wear a skirt</string>
    <string name="shoes">Please wear boots</string>
    <string name="short_skirt">Please wear a short skirt</string>
    <string name="shorts">Please wear shorts</string>
    <string name="summer_jacket">Please wear a summer coat</string>
    <string name="summer_shoes">Please wear open-toes</string>
    <string name="t_shirt">Please wear a t-shirt</string>
    <string name="tights_20">Please wear 20 den tights</string>
    <string name="tights_40">Please wear 40 den tights</string>
    <string name="tights_60">Please wear 60 den tights</string>
    <string name="tights_80">Please wear 80 den tights</string>
    <string name="underpants">Please wear underpants</string>
    <string name="umbrella_off">Please don\'t take an umbrella</string>
    <string name="umbrella_on">Please take an umbrella</string>
    <string name="winter_hat">Please wear a winter hat</string>
    <string name="winter_jacket">Please wear a winter coat</string>
    <string name="winter_shoes">Please wear winter boots</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efп¬Ѓcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the componentвЂ™s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB wonвЂ™t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Let\'s start!</string>
    <string name="image_legs_1">legs</string>
    <string name="image_legs_2">underLegs</string>
    <string name="teach_1">Don\'t know what to wheather?\nNo problem</string>
    <string name="teach4">Swipe to see another clothes layer</string>
    <string name="teach3">Tap to see a clothes definition</string>
    <string name="teach5">Tap long to change clothes\nThe app will remember your choice</string>
    <string name="teach2">Look at current weather and recommended clothes</string>
    <string name="teach5start">START</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="units">Units</string>
    <string name="real">Real</string>
    <string name="feels_like">Feels like</string>
    <string name="temperature">Temperature</string>
    <string name="location_error">Location service is not available now\nPlease, check your location settings</string>
    <string name="first_connection_error">Internet connection is required to first launch\nPlease, check your internet settings</string>
    <string name="connection_error">Internet connection error\nYou can see old data</string>
    <string name="tornado">tornado</string>
    <string name="tropical_storm">tropical storm</string>
    <string name="hurricane">hurricane</string>
    <string name="sunny">sunny</string>
    <string name="severe_thunderstorms">thunderstorms</string>
    <string name="thunderstorms">thunderstorms</string>
    <string name="mixed_rain_and_snow">freezing rain</string>
    <string name="mixed_rain_and_sleet">freezing rain</string>
</resources>